# qbf-definition-variable-movement-Artifact

./: LICENSE.txt  README.md  README.txt  build.sh  qbf-definition-movement.py
cnftools/: CMakeLists.txt  Main.cc  Makefile  README.md  cmake_install.cmake  gbdlib.cc  install-pymod.sh  setup.py
cnftools/cadical/tmp/: Cadical-gitclone.cmake  Cadical-gitupdate.cmake
cnftools/lib/md5/: CMakeLists.txt  Makefile  cmake_install.cmake
cnftools/libbz2_TEMP/: bzip2-1.0.6-13.el7.src.rpm
cnftools/src/: CMakeLists.txt  GBDHash.h  Makefile  Normalize.h  StreamBuffer.h  cmake_install.cmake
cnftools/src/gates/: BlockList.h  CMakeLists.txt  GateAnalyzer.h  GateFormula.h  Makefile  OccurrenceList.h  cmake_install.cmake
cnftools/src/util/: CMakeLists.txt  CNFFormula.h  Makefile  Runtime.h  SolverTypes.h  cmake_install.cmake
data/: Figure2andFigure3.xlsx  Figure4.xlsx  Table1.xlsx  table2.xlsx
formulas/: Adder2-8-s.qdimacs  incrementer-enc07-nonuniform-depth-25.qdimacs  irst.dme6.B-d4.qdimacs  k_branch_p-21.qdimacs  nreachq_query71_1344.qdimacs  nusmv.tcas^3.B-f2.qdimacs  unit11_3_b.qdimacs
kissat/: build.sh  qbf-gate-processor.py
ldomino-formulas/: ldom18-A.order  ldom18-A.qdimacs  ldom21-A.order  ldom21-A.qdimacs  ldom21.qdimacs  ldom8-A.order  ldom8-A.qdimacs  ldom8.qdimacs
qrat-trim/: qrat-trim.c
scripts/: bloqq-end2end.sh  compare-detection-tools.sh  detect-move.sh  ldomino-wrap.sh  ldomino.sh  move-formulas-wrap.sh  move-formulas.sh  run-solvers-wrap.sh  run-solvers.sh  run_ghostq_cegar.sh  run_ghostq_plain.sh  verify-movement.sh
solvers/: bloqqer  depqbf  qcir-conv.py  rareqs
utilities/: clean-bloqqer-proof.py  combineGates.py  compare-detection-tools.py  mapVariableOrdering.py  printLdomino.py  (+1 more)
(+13 files in other folders)
